[package]
name = "rquickjs-lib"
version = "0.1.0"
authors = ["王子和 <648830605@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rquickjs ={"version"="0.1.1",features=["full-async","parallel"]}
log={"version="="0.4.14"}
log4rs = "1.0.0"
